--- a/main.html
+++ b/main.html
@@ -7,7 +7,9 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<div>
+		<p><span class = "span">Before Element</span> This is the main container element <span class = "span">After Element</span></p>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
