--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<div>
-		<span class = "span">Before Element </span>This is the main container element<span class = "span"> After Element</span>
+		This is the main container element
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
